--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,11 @@
 * {
   box-sizing: border-box;
 }
+.app-wrapper {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+.wrapper {
+  width: 100%;
+}
