--- a/client/src/components/nav/Nav.css
+++ b/client/src/components/nav/Nav.css
@@ -1,33 +1,46 @@
 nav {
   display: flex;
   flex-direction: row;
+  justify-content: flex-end;
+  width: 100%;
 }
 
 .navigation {
   display: flex;
   justify-content: space-between;
+  width: 100%;
   align-items: center;
   flex-direction: row;
-  height: 60px;
+  height: 70px;
   background-color: #f8f8f8;
   box-shadow: 0px 1px 6px 2px rgba(0, 0, 0, 0.49);
 }
 
-.navigation div {
-  display: flex;
-  justify-content: space-around;
-}
-
 .search {
   display: flex;
-  justify-content: center;
+  justify-content: left;
   width: 100%;
   align-items: center;
+  margin-left: 15px;
+}
+
+.search input {
+  width: 320px;
+  font-size: 20px;
+}
+
+.search i {
+  font-size: 20px;
+  margin-left: 2px;
 }
 
 .nav-list {
-  list-style: none;
   display: flex;
   flex-direction: row;
-  width: 100%;
+  justify-content: space-evenly;
+  align-items: center;
+  list-style: none;
+  width: 60%;
+  font-size: 20px;
+  font-weight: 500;
 }
