--- a/client/src/components/nav/Nav.css
+++ b/client/src/components/nav/Nav.css
@@ -5,6 +5,11 @@ nav {
   width: 100%;
 }
 
+ul li:hover {
+  cursor: pointer;
+  color: #174157;
+}
+
 .navigation {
   display: flex;
   justify-content: space-between;
@@ -32,6 +37,10 @@ nav {
 .search i {
   font-size: 20px;
   margin-left: 2px;
+}
+
+.search i:hover {
+  cursor: pointer;
 }
 
 .nav-list {
